--- a/style.css
+++ b/style.css
@@ -76,6 +76,61 @@ textarea{
     gap: 35px;
 }
 
+.main-title{
+    display: block;
+    width: fit-content;
+    margin: 0 auto 80px;
+    font-size: 30px;
+    font-weight: 700;
+    text-transform: uppercase;
+    border: 2px solid var(--subColor);
+    padding: 0 20px;
+    position: relative;
+    z-index: 1;
+}
+
+.main-title::before,
+.main-title::after{
+    content: "";
+    width: 12px;
+    height: 12px;
+    background-color: var(--mainColor2);
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    border-radius: 50%;
+}
+
+.main-title::before{
+    left: -30px;
+}
+
+.main-title::after{
+    right: -30px;
+}
+
+.main-title:hover{
+    transition-delay: .5s;
+    color: var(--mainColor);
+    border: 2px solid var(--mainColor);
+}
+
+.main-title:hover::before{
+    animation-name: moveToright;
+    animation-duration: .5s;
+    animation-timing-function: linear;
+    animation-fill-mode: forwards;
+    z-index: -1;
+}
+
+.main-title:hover::after{
+    animation-name: moveToleft;
+    animation-duration: .5s;
+    animation-timing-function: linear;
+    animation-fill-mode: forwards;
+    z-index: -1;
+}
+
 /* Animations */
 @keyframes slideFrombottom{
     0%{
@@ -305,8 +360,8 @@ header .container nav .main-ul > li:last-child .mega-menu img{
 .face > a{
     color: var(--mainColor2);
     position: absolute;
-    bottom: 25px;
-    left: 50%;
+    bottom: 40px;
+    left: 49.20%;
     transform: translateX(-50%);
     z-index: 2;
     font-size: 30px;
@@ -344,60 +399,6 @@ header .container nav .main-ul > li:last-child .mega-menu img{
 /* Articles Section */
 .articles{
     padding: var(--sectionPadding);
-}
-
-.main-title{
-    display: block;
-    width: fit-content;
-    margin: 0 auto 80px;
-    font-size: 30px;
-    font-weight: 700;
-    text-transform: uppercase;
-    border: 2px solid var(--subColor);
-    padding: 0 20px;
-    position: relative;
-}
-
-.main-title::before,
-.main-title::after{
-    content: "";
-    width: 12px;
-    height: 12px;
-    background-color: var(--mainColor2);
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    border-radius: 50%;
-}
-
-.main-title::before{
-    left: -30px;
-}
-
-.main-title::after{
-    right: -30px;
-}
-
-.main-title:hover{
-    transition-delay: .5s;
-    color: var(--mainColor);
-    border: 2px solid var(--mainColor);
-}
-
-.main-title:hover::before{
-    animation-name: moveToright;
-    animation-duration: .5s;
-    animation-timing-function: linear;
-    animation-fill-mode: forwards;
-    z-index: -1;
-}
-
-.main-title:hover::after{
-    animation-name: moveToleft;
-    animation-duration: .5s;
-    animation-timing-function: linear;
-    animation-fill-mode: forwards;
-    z-index: -1;
 }
 
 .articles .container .grid-columns--4 .article{
@@ -453,6 +454,7 @@ header .container nav .main-ul > li:last-child .mega-menu img{
 /* Gallary Section */
 .gallary{
     padding: var(--sectionPadding);
+    background-color: var(--subColor2);
 }
 
 .gallary .container .grid-columns--3 .box{
@@ -485,7 +487,6 @@ header .container nav .main-ul > li:last-child .mega-menu img{
     transition: var(--mainTransition);
 }
 
-
 .gallary .container .grid-columns--3 .box div:hover::before{
     animation-name: flashing;
     animation-duration: .7s;
@@ -496,7 +497,6 @@ header .container nav .main-ul > li:last-child .mega-menu img{
 }
 
 /* Features Section */
-
 .features .container .grid-columns--3 .feature{
     text-align: center;
     border: 1px solid rgb(211, 211, 211);
@@ -649,7 +649,329 @@ header .container nav .main-ul > li:last-child .mega-menu img{
     opacity: .5;
 }
 
+/* Testimonials Section */
+.testimonials .container .grid-columns--3 .testimonial{
+    position: relative;
+    padding: 20px;
+    background-color: var(--mainColor);
+    border-radius: var(--borderRadius);
+}
+
+.testimonials .container .grid-columns--3 .testimonial img{
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    position: absolute;
+    top: 0;
+    right: -10px;
+    border: 10px solid var(--subColor2);
+    transform: translateY(-50%);
+}
+
+.testimonials .container .grid-columns--3 .testimonial h2{
+    font-size: 19px;
+}
+
+.testimonials .container .grid-columns--3 .testimonial span{
+    color: gray;
+    font-size: 17px;
+}
+
+.testimonials .container .grid-columns--3 .testimonial .stars i{
+    color: #FFC107;
+}
+
+.testimonials .container .grid-columns--3 .testimonial p{
+    font-size: 1em;
+    color: gray;
+}
+
+/* Team-members Section */
+.team-members .container .grid-columns--3 .member{
+    position: relative;
+}
+
+.team-members .container .grid-columns--3 .member::before{
+    content: "";
+    width: calc(100% - 60px);
+    height: 100%;
+    position: absolute;
+    top: 0;
+    right: 0;
+    background-color: var(--subColor2);
+    border-radius: var(--borderRadius);
+    z-index: -2;
+}
+
+.team-members .container .grid-columns--3 .member::after{
+    content: "";
+    width: 0;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    right: 0;
+    background-color: rgb(223, 223, 223);
+    border-radius: var(--borderRadius);
+    z-index: -1;
+    transition: var(--mainTransition);
+}
+
+.team-members .container .grid-columns--3 .member:hover::after{
+    width: calc(100% - 60px);
+}
+
+.team-members .container .grid-columns--3 .member .member--img--social{
+    width: 100%;
+    padding-top: 60px;
+    display: flex;
+    align-items: center;
+}
+
+.team-members .container .grid-columns--3 .member .member--img--social img{
+    width: calc(100% - 60px);
+    border-radius: var(--borderRadius);
+    transition: var(--mainTransition);
+}
+
+.team-members .container .grid-columns--3 .member:hover .member--img--social img{
+    filter: grayscale(100%);
+}
+
+.team-members .container .grid-columns--3 .member .member--img--social .member-social{
+    width: 60px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.team-members .container .grid-columns--3 .member .member--img--social .member-social a{
+    color: rgb(100, 100, 100);
+    font-size: 18px;
+    transition: var(--mainTransition);
+}
+
+.team-members .container .grid-columns--3 .member .member--img--social .member-social a:not(:last-child){
+    margin-bottom: 15px;
+}
+
+.team-members .container .grid-columns--3 .member .member--img--social .member-social a:hover{
+    color: var(--mainColor2);
+}
+
+.team-members .container .grid-columns--3 .member .member-info{
+    margin: 10px 0 20px 80px;
+}
+
+.team-members .container .grid-columns--3 .member .member-info h2{
+    color: var(--mainColor2);
+    font-size: 22px;
+    transition: var(--mainTransition);
+}
+
+.team-members .container .grid-columns--3 .member:hover .member-info h2{
+    color: rgb(100, 100, 100);
+}
+
+/* Services Section */
+.services .container .grid-columns--3 .service{
+    text-align: center;
+    background-color: var(--mainColor);
+    box-shadow: 0 0 7px 0 rgb(156, 156, 156);
+    position: relative;
+    transition: var(--mainTransition);
+    -webkit-counter-increment: services;
+    -moz-counter-increment: services;
+    -ms-counter-increment: services;
+    -o-counter-increment: services;
+    counter-increment: services;
+}
+
+.services .container .grid-columns--3 .service::before{
+    content: "";
+    width: 0;
+    height: 3.5px;
+    background-color: var(--mainColor2);
+    position: absolute;
+    top: -3.5px;
+    left: 50%;
+    transform: translateX(-50%);
+    transition: var(--mainTransition);
+}
+
+.services .container .grid-columns--3 .service:hover{
+    transform: translateY(-15px);
+    box-shadow: 0 0 15px 0 rgb(156, 156, 156);
+}
+
+.services .container .grid-columns--3 .service:hover::before{
+    width: 100%;
+}
+
+.services .container .grid-columns--3 .service i{
+    font-size: 70px;
+    color: rgb(196, 196, 196);
+    margin: 35px 0 20px;
+}
+
+.services .container .grid-columns--3 .service h2{
+    color: var(--mainColor2);
+    margin-bottom: 30px;
+    font-size: 27px;
+}
+
+.services .container .grid-columns--3 .service .service-info{
+    padding: 10px;
+    text-align: right;
+    background-color: var(--subColor2);
+    position: relative;
+}
+
+.services .container .grid-columns--3 .service .service-info::before{
+    content: "0" counter(services);
+    font-size: 30px;
+    font-weight: 700;
+    color: var(--mainColor);
+    background-color: var(--mainColor2);
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0 40px 0 22px;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+.services .container .grid-columns--3 .service .service-info::after{
+    content: "";
+    background-color: rgb(196, 196, 196);
+    height: 100%;
+    width: 50px;
+    position: absolute;
+    top: 0;
+    left: 78px;
+    transform: skewX(-25deg);
+}
+
+.services .container .grid-columns--3 .service .service-info a{
+    color: var(--mainColor2);
+    font-size: 17px;
+    transition: .2s;
+}
+
+.services .container .grid-columns--3 .service .service-info a:hover{
+    font-weight: 800;
+    letter-spacing: 1px;
+}
+
+/* Skills Section */
+.skills .container .skills-content{
+    display: flex;
+}
+
+.skills .container .skills-content .all-skills{
+    flex: 1;
+}
+
+.skills .container .skills-content .all-skills .skill:not(:last-child){
+    margin-bottom: 20px;
+}
+
+.skills .container .skills-content .all-skills .skill h2{
+    font-size: 20px;
+    margin-bottom: 12px;
+}
+
+.skills .container .skills-content .all-skills .skill .progress{
+    height: 30px;
+    width: 100%;
+    background-color: var(--subColor2);
+    position: relative;
+}
+
+.skills .container .skills-content .all-skills .skill .progress::after{
+    content: attr(progress);
+    font-size: 13px;
+    font-weight: 800;
+    padding: 0 5px;
+    position: absolute;
+    border: 1px solid rgb(175, 175, 175);
+    color: var(--mainColor2);
+    top: -43px;
+    right: 0;
+    border-radius: 5px;
+}
+
+.skills .container .skills-content .all-skills .skill .progress span{
+    content: "";
+    height: 100%;
+    background-color: var(--mainColor2);
+    position: absolute;
+    top: 0;
+    left: 0;
+    transition: width .4s ease-out;
+}
+
+/* How-it--works Section */
+.how-it--works .container .work-info{
+    display: flex;
+    align-items: center;
+}
+
+.how-it--works .container .work-info > img{
+    width: 470px;
+    margin-right: 100px;
+}
+
+.how-it--works .container .work-info .businesses{
+    flex: 1;
+}
+
+.how-it--works .container .work-info .businesses .business{
+    display: flex;
+    align-items: center;
+    padding: 30px;
+    background-color: var(--mainColor);
+    box-shadow: 0 0 5px 1px rgb(156, 156, 156);
+    border-radius: 5px;
+    position: relative;
+    z-index: 1;
+}
+
+.how-it--works .container .work-info .businesses .business::before{
+    content: "";
+    height: 0;
+    width: 0;
+    transition: .3s;
+    background-color: #ededed70;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: -1;
+}
+
+.how-it--works .container .work-info .businesses .business:hover::before{
+    width: 100%;
+    height: 100%;
+}
+
+.how-it--works .container .work-info .businesses .business:not(:last-child){
+    margin-bottom: 30px;
+}
+
+.how-it--works .container .work-info .businesses .business img{
+    width: 64px;
+    margin-right: 30px;
+}
+
+.how-it--works .container .work-info .businesses .business p{
+    font-size: 18px;
+    color: gray;
+}
+
 /* Media Queries */
+
 /* Mobiles */
 @media (max-width: 767px){
     /* Utilities */
@@ -690,6 +1012,7 @@ header .container nav .main-ul > li:last-child .mega-menu img{
         width: 100%;
     }
 
+    /* Face Section */
     .face .container{
         display: flex;
         height: 100%;
@@ -712,10 +1035,43 @@ header .container nav .main-ul > li:last-child .mega-menu img{
     .face .container img{
         display: none;
     }
+
+    /* Skills Section */
+    .skills .container .skills-content img{
+        display: none;
+    }
+
+    /* How-it-works Section */
+    .how-it--works .container .work-info > img{
+        display: none;
+    }
+
+    .how-it--works .container .work-info .businesses .business{
+        display: flex;
+        flex-direction: column;
+    }
+
+    .how-it--works .container .work-info .businesses .business img{
+        width: 75px;
+        margin-right: 0;
+        margin-bottom: 10px;
+    }
+
+    .how-it--works .container .work-info .businesses .business .business-info{
+        text-align: center;
+    }
 }
 
-@media (min-width: 768px) and (max-width: 1112px){
+@media (min-width: 768px) and (max-width: 1024px){
+    /* Skills Section */
+    .skills .container .skills-content{
+        display: flex;
+        flex-direction: column;
+    }
+}
 
+/* Custom media querie */
+@media (min-width: 768px) and (max-width: 1112px){
     /* Face Section */
     .face .container div{
         text-align: center;
@@ -735,6 +1091,36 @@ header .container nav .main-ul > li:last-child .mega-menu img{
     }
 }
 
+
+/* Custom media querie */
+@media (min-width: 768px) and (max-width: 1170px){
+    /* How-it--works Section */
+    .how-it--works .container .work-info{
+        display: flex;
+        flex-direction: column;
+    }
+
+    .how-it--works .container .work-info > img{
+        margin-right: 0;
+        margin-bottom: 100px;
+    }
+    
+    .how-it--works .container .work-info .businesses .business{
+        display: flex;
+        flex-direction: column;
+    }
+
+    .how-it--works .container .work-info .businesses .business img{
+        width: 75px;
+        margin-right: 0;
+    }
+
+    .how-it--works .container .work-info .businesses .business .business-info{
+        text-align: center;
+    }
+}
+
+/* Custom media querie */
 @media (min-width: 768px) and (max-width: 1220px){
     /* Header */
     header .container nav .main-ul > li:last-child:hover .mega-menu img{
