--- a/style.css
+++ b/style.css
@@ -57,6 +57,9 @@ input,
 textarea{
     outline: none;
     border: none;
+    caret-color: var(--mainColor2);
+    color: grey;
+    font-family: 'Cairo', sans-serif;
 }
 
 /* Utilities */
@@ -1058,7 +1061,6 @@ header .container nav .main-ul > li:last-child .mega-menu img{
 .events .container .subscribe input[type="email"]{
     flex: 1;
     margin-right: 20px;
-    color: grey;
 }
 
 .events .container .subscribe input[type="submit"]{
@@ -1288,6 +1290,12 @@ header .container nav .main-ul > li:last-child .mega-menu img{
     background-color: #ffffffeb;
 }
 
+.stats .container > h1{
+    text-align: center;
+    font-size: 40px;
+    margin-bottom: 35px;
+}
+
 .stats .container .grid-columns--4 .state{
     text-align: center;
     background-color: var(--mainColor);
@@ -1339,6 +1347,221 @@ header .container nav .main-ul > li:last-child .mega-menu img{
     font-size: 20px;
     font-style: italic;
 }
+
+/* Discount Section */
+.discount{
+    display: flex;
+}
+
+.discount .discount-show{
+    width: 50%;
+    background-image: url("images/discount-background1.jpg");
+    background-position: top left;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+    z-index: 1;
+    display: flex;
+    align-items: center;
+}
+
+.discount .discount-show::before{
+    content: "";
+    width: 100%;
+    height: 100%;
+    background-color: #2196f3f7;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+}
+
+.discount .discount-show .show-info{
+    width: 75%;
+    margin: 0 auto;
+    text-align: center;
+}
+
+
+.discount .discount-show .show-info h1{
+    font-size: 40px;
+    margin-bottom: 10px;
+    color: var(--mainColor);
+}
+
+.discount .discount-show .show-info p{
+    font-size: 18px;
+    color: var(--mainColor);
+}
+
+.discount .discount-show .show-info img{
+    width: 300px;
+    margin: 0 auto;
+    max-width: 100%;
+}
+
+.discount .discount-form{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 50%;
+    padding: 30px 0;
+}
+
+.discount .discount-form form{
+    width: 44.5%;
+}
+
+.discount .discount-form h1{
+    font-size: 40px;
+    letter-spacing: -1px;
+    text-align: center;
+    width: fit-content;
+    margin-bottom: 20px;
+}
+
+.discount .discount-form form input,
+.discount .discount-form form textarea{
+    width: 100%;
+    padding: 12px 15px;
+    background-color: #F9F9F9;
+    margin-bottom: 25px;
+    font-size: 1em;
+    font-weight: 400;
+    border-bottom: 1px solid rgb(197, 197, 197);
+}
+
+.discount .discount-form form input[type="submit"]{
+    background-color: var(--mainColor2);
+    color: var(--mainColor);
+    font-size: 20px;
+    font-weight: 700;
+    letter-spacing: 1px;
+    border-bottom: none;
+    transition: .3s;
+}
+
+.discount .discount-form form input[type="submit"]:hover{
+    background-color: #0895d6;
+}
+
+footer .container > span{
+    display: block;
+    text-align: center;
+    color: var(--mainColor);
+    margin-top: 50px;
+}
+
+footer .container .grid-columns--4 .author-info{
+    color: var(--mainColor);
+}
+
+footer .container .grid-columns--4 .author-info h2{
+    font-size: 40px;
+    margin-bottom: 5px;
+    margin-top: -6px;
+}
+
+footer .container .grid-columns--4 .author-info a{
+    background-color: #313131;
+    color: #b9b9b9;
+    text-align: center;
+    width: 50px;
+    height: 50px;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    transition: .3s;
+}
+
+footer .container .grid-columns--4 .author-info a:not(:nth-child(4)){
+    margin-right: 5px;
+}
+
+footer .container .grid-columns--4 .author-info a i{
+    font-size: 22px;
+}
+
+footer .container .grid-columns--4 .author-info a:nth-child(2):hover{
+    background-color: #1877F2;
+}
+
+footer .container .grid-columns--4 .author-info a:nth-child(3):hover{
+    background-color: #1DA1F2;
+}
+
+footer .container .grid-columns--4 .author-info a:nth-child(4):hover{
+    background-color: #6cc644;
+}
+
+footer .container .grid-columns--4 .author-info p{
+    margin-top: 15px;
+    color: #b9b9b9;
+}
+
+footer .container .grid-columns--4 .important-links li{
+    padding: 10px;
+}
+
+footer .container .grid-columns--4 .important-links li:not(:last-child){
+    border-bottom: 1px solid gray;
+}
+
+footer .container .grid-columns--4 .important-links li a{
+    color: #b9b9b9;
+    font-size: 1em;
+    transition: .3s;
+}
+
+footer .container .grid-columns--4 .important-links li a i{
+    color:rgb(38, 154, 248);
+    margin-right: 10px;
+    transition: .3s;
+}
+
+
+footer .container .grid-columns--4 .important-links li:hover a{
+    transform: translateX(10px);
+    color: var(--mainColor);
+}
+
+footer .container .grid-columns--4 .important-links li:hover a i{
+    color:rgb(34, 136, 219);
+}
+
+footer .container .grid-columns--4 .business-informations .info{
+    display: flex;
+    align-items: center;
+}
+
+footer .container .grid-columns--4 .business-informations .info:not(:last-child){
+    margin-bottom: 25px;
+}
+
+footer .container .grid-columns--4 .business-informations .info i{
+    font-size: 25px;
+    margin-right: 15px;
+    color: var(--mainColor2);
+}
+
+footer .container .grid-columns--4 .business-informations .info span{
+    color: #b9b9b9;
+}
+
+footer .container .grid-columns--4 .imgs-grid{
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(77px, 1fr));
+    gap: 8px;
+    height: 65%;
+}
+
+footer .container .grid-columns--4 .imgs-grid img{
+    width: 100%;
+    height: 100%;
+    border: 3px solid var(--mainColor);
+}
+
+
 
 /* Media Queries */
 
@@ -1486,6 +1709,45 @@ header .container nav .main-ul > li:last-child .mega-menu img{
     .videos .container .top-videos .videos-preview img{
         margin-bottom: 20px;
     }
+
+    /* Discount Section */
+    .discount{
+        display: flex;
+        flex-direction: column;
+    }
+
+    .discount .discount-show,
+    .discount .discount-form{
+        width: 100%;
+    }
+
+    .discount .discount-show {
+        padding: 20px 0;
+    }
+
+    .discount .discount-form form{
+        width: 75%;
+    }
+
+    /* Footer */
+    footer .container .grid-columns--4 .author-info,
+    footer .container .grid-columns--4 .important-links{
+        text-align: center;
+    }
+    
+    footer .container .grid-columns--4 .business-informations .info{
+        display: flex;
+        flex-direction: column;
+    }
+    
+    footer .container .grid-columns--4 .business-informations .info i{
+        margin-bottom: 10px;
+        margin-right: 0;
+    }
+
+    footer .container .grid-columns--4 .business-informations .info span{
+        text-align: center;
+    }
 }
 
 @media (min-width: 768px) and (max-width: 1024px){
@@ -1534,6 +1796,25 @@ header .container nav .main-ul > li:last-child .mega-menu img{
 
     .videos .container .top-videos .videos-preview img{
         margin-bottom: 20px;
+    }
+
+    /* Discount Section */
+    .discount{
+        display: flex;
+        flex-direction: column;
+    }
+
+    .discount .discount-show,
+    .discount .discount-form{
+        width: 100%;
+    }
+
+    .discount .discount-show {
+        padding: 20px 0;
+    }
+
+    .discount .discount-form form{
+        width: 65%;
     }
 }
 
