--- a/style.css
+++ b/style.css
@@ -375,6 +375,34 @@ header .container nav .main-ul > li:last-child .mega-menu img{
     animation-iteration-count: infinite;
 }
 
+.go-to-up{
+    width: 40px;
+    height: 40px;
+    z-index: 100;
+    background-color: var(--mainColor2);
+    position: fixed;
+    bottom: 40px;
+    right: 20px;
+    justify-content: center;
+    align-items: center;
+    border-radius: 5px;
+    transition: .3s;
+    display: none;
+}
+
+.go-to-up.show-up--button{
+    display: flex;
+}
+
+.face > span i{
+    color: var(--mainColor);
+    font-size: 18px;
+}
+
+.face > span:hover{
+    background-color: #186ddd;
+}
+
 .face .container{
     display: flex;
     height: 100%;
